infra/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: briq-protocol
  annotations:
    cloud.google.com/backend-config: '{"default": "briq-protocol"}'
spec:
  selector:
    app: briq-protocol
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
