infra/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: briq-protocol
  annotations:
    kubernetes.io/ingress.global-static-ip-name: lb-sltech-company-ipv4-1
    networking.gke.io/v1beta1.FrontendConfig: "briq-protocol"
    networking.gke.io/managed-certificates: #@ data.values.name + "-managed-cert"
spec:
  rules:
#@ arr = ["api.sltech.company", "api.briq.construction"]
#@ for i in arr:
  - host: #@ i
  - host: 
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: briq-protocol
            port:
              number: 80
#@ end
